# my_m3

./: gen_ckpt.py  m3_inference_api.py  main_train.py
assistant_script/: cut_to_100  cut_to_100.c  npy_shape.py
ckpts/data_lr10Gbps/: feat_output_py.txt
clibs/: .topo.h.baiduyun.uploading.cfg  get_fct_mmf.c  run.c  topo.c  topo.h
config/: test_config_path.yaml  train_config_path.yaml  train_config_path_demo.yaml
data/shard0_nflows20000_nhosts3_lr10Gbps/: config_topo-pl-3_flows_s0.txt  config_topo-pl-3_flows_s1.txt  config_topo-pl-3_flows_s2.txt  fat.npy  fct_flowsim.npy  fct_i_topo-pl-3_s1.npy  fct_topo-pl-3_s0.npy  fct_topo-pl-3_s1.npy  fct_topo-pl-3_s2.npy  feat_topo-pl-3_s0.npz  feat_topo-pl-3_s1.npz  feat_topo-pl-3_s2.npz  flows.txt  fsd.npy  fsize.npy  pdrop_topo-pl-3_s0.txt  pdrop_topo-pl-3_s1.txt  pdrop_topo-pl-3_s2.txt  stats.npy
data/shard0_nflows20000_nhosts5_lr10Gbps/: config_topo-pl-5_flows_s0.txt  config_topo-pl-5_flows_s1.txt  config_topo-pl-5_flows_s2.txt  fat.npy  fct_flowsim.npy  fct_i_topo-pl-5_s0.npy  fct_topo-pl-5_s0.npy  fct_topo-pl-5_s1.npy  fct_topo-pl-5_s2.npy  feat_topo-pl-5_s0.npz  feat_topo-pl-5_s1.npz  feat_topo-pl-5_s2.npz  fid_topo-pl-5_s2.npy  fsd.npy  fsize.npy  pdrop_topo-pl-5_s0.txt  pdrop_topo-pl-5_s1.txt  pdrop_topo-pl-5_s2.txt  stats.npy
data/shard0_nflows20000_nhosts7_lr10Gbps/: config_topo-pl-7_flows_s0.txt  fat.npy  (+18 more)
note/: note.md
parsimon/backends/High-Precision-Congestion-Control/gen_path/: Cargo.toml
parsimon/backends/High-Precision-Congestion-Control/gen_path/src/: main.rs
util/: consts.py  dataset.py  model.py
(+867 files in other folders)
