[package]
name = "scratch"
version = "0.1.0"
authors = ["Kevin Zhao <kzhao0986@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.11.0"
rayon = "1.8.0"
clap = { version = "4.4.8", features = ["derive", "suggestions"] }
